Stop cutting off icon buttons in group content component

--- a/src/app/components/creator/group-content/group-content.component.scss
+++ b/src/app/components/creator/group-content/group-content.component.scss
@@ -33,6 +33,9 @@ mat-expansion-panel-header {
   margin: 5px;
   transition: all 150ms;
   color: var(--primary) !important;
+  &.mat-focus-indicator {
+    border-radius: 0;
+  }
 
   &:hover {
     transform: scale(1.1);
